--- a/selecta/package.json
+++ b/selecta/package.json
@@ -15,6 +15,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.10",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
