--- a/selecta/package.json
+++ b/selecta/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.10",
     "typescript": "^4.9.5",
